changed gallery on mobile, made some fixes
- Changed the gallery on smartphones a little, letting it fill up more
  of the screen.
- Removed the faded previous and next images shown in the gallery based
  on a request. I might create a separate branch with them left in.
  Perhaps.
- Made a couple of small tweaks/fixes.

--- a/styles/_media-queries.sass
+++ b/styles/_media-queries.sass
@@ -1,8 +1,7 @@
+// touchscreens of any size
 .mobile
 
-    #gallery
-        overflow: hidden
-
+    // gallery navigation (`#frame' is required)
     #frame .img-nav
         background: $colour-white-tint
         z-index: 0
@@ -12,59 +11,82 @@
 
 @media (max-width: $media-query-unit * 3 - $media-query-constant)
 
-    // #{} this comment helps syntax highlighting not go bork
+    // {} this comment helps syntax highlighting not go bork
+    // netbooks, tablets, 3 columns
 
+    // previews
     section > a
         width: calc(33.33% - #{$unit * 2})
 
-    #content
-        width: 33.33%
-
+    // image conveyor frame
     #frame
         width: calc(66.66% - #{$unit * 2})
 
+    // gallery information and image thumbnails
+    #content
+        width: 33.33%
+
+    // let javascript determine how many columns are showing
     #css-to-js
         z-index: 3
 
 @media (max-width: $media-query-unit * 2 - $media-query-constant)
 
-    // #{} this comment helps syntax highlighting not go bork
+    // {} this comment helps syntax highlighting not go bork
+    // smartphones, two columns, gallery information below images
 
+    // previews
     section > a
         width: calc(50% - #{$unit * 2})
 
+    // behance and email links in header
     header div div
         display: inline-block
         margin-top: $unit * 2
         position: static
         width: calc(50% + #{$unit})
 
+        // behance
         &:first-of-type
             margin-left: $unit * -1
 
+        // email
         &:last-of-type
             margin-right: $unit * -1
 
+    // probably the gallery
+    #gallery
+        margin-left: $unit * -2
+
+        // #frame and #content
+        & > div
+            width: 100%
+
+    // gallery information and image thumbnails
     #content
         position: static
-        width: calc(100% - #{$unit * 2})
         @include prefix(webkit moz, box-shadow, none)
 
+        // image thumbnails
         nav a
             width: calc(16.66% - #{$unit * 2})
 
+    // image conveyor frame
     #frame
         width: calc(100% - #{$unit * 2})
 
+        // clickable area for gallery navigation
         .img-nav
             width: 35%
 
+    // let javascript determine how many columns are showing
     #css-to-js
         z-index: 2
 
 @media (max-width: $media-query-unit - $media-query-constant)
 
-    // #{} this comment helps syntax highlighting not go bork
+    // {} this comment helps syntax highlighting not go bork
+    // really small smartphones, two columns
 
     header
         padding: $unit * 2.5 0 $unit * 2
@@ -96,14 +118,6 @@
 
     #content nav a
         width: calc(25% - #{$unit * 2})
-
-    .cover
-
-        &.r
-            left: calc(100% - #{$unit})
-
-        &.l
-            right: calc(100% - #{$unit})
 
     .img-nav
 
